name: sdr
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved

library
    exposed-modules:
        Data.SDR
    build-depends:
        base -any,
        containers -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans -fprof-auto -O2

test-suite test-sdr
    type: exitcode-stdio-1.0
    main-is: sdr-test.hs
    build-depends:
        tasty >0.10,
        tasty-hunit -any,
        tasty-quickcheck -any,
        HUnit -any,
        QuickCheck -any,
        base -any,
        containers -any
    default-language: Haskell2010
    hs-source-dirs: src,test
    other-modules:
        Data.SDR
    ghc-options: -ferror-spans
